[Fix][Search Page] Fix color and layout issue

--- a/src/scss/theme/_search.scss
+++ b/src/scss/theme/_search.scss
@@ -47,6 +47,7 @@
 
         &:last-child {
             border-bottom: 0;
+            padding-bottom: 0;
         }
     
         h2 {
@@ -69,6 +70,7 @@
                 font-weight: normal;
                 text-decoration: none;
                 word-break: break-all;
+                transition: all 0.2s ease;
     
                 &:hover {
                     color: $accentColor;
@@ -116,8 +118,8 @@
             height: 32px;
             font-size: 0.78rem;
             margin-left: 8px;
-            color: $secondaryColor;
-            border: 1px solid $secondaryColor;
+            color: $accentColor;
+            border: 1px solid $accentColor;
             text-decoration: none;
             border-radius: 4px;
             transition: all 0.4s ease;
@@ -125,7 +127,6 @@
             &:hover {
                 color: #fff;
                 background: $accentColor;
-                border-color: $accentColor;
             }
         }
 
